# ASI-Arrival-Calculator

./: .gitignore  ANSWERS.txt  CHANGELOG.md  GEMENI_01.txt  LICENSE  README.md  asi.txt  perplexity.txt  pyproject.toml  requirements.txt
evidence_notes/: README.md  ai_2027.md  ai_futures.md  ai_impacts_survey.md  cotra_bioanchors.md  epoch_ai.md  government_restrictions.md  lab_statements.md  metaculus.md  metr_time_horizons.md
evidence_tables/: agi_evidence.csv  asi_evidence.csv  data_inventory.csv  extracted_assumptions.csv  intermediate_milestones.csv  outside_forecasts.csv  trend_inputs.csv  v0_5_parameter_sources.csv
forecast_inputs/: agi_definition.yaml  asi_definition.yaml  author_prior_scenario.yaml  base_forecast_inputs.yaml  capability_ladder.yaml  milestone_definitions.yaml
research_note/: forecasting_agi_and_asi_arrival.md  implementation_report_agi_asi_split.md
src/asi_forecast/: __init__.py  analyze.py  charts.py  cli.py  drivers.py  forecast_model.py  helpers.py  iman_conover.py  load_data.py  model.py  monte_carlo.py  plot.py  schemas.py  simulate.py  uncertainty.py  write_report.py
tests/: test_bounded_support.py  test_capability_ladder.py  test_distribution_fitting.py  test_distributions.py  test_evidence_tables.py  test_hidden_constants_are_yaml_exposed.py  test_no_timeline_inversion.py  test_parameter_traceability.py  test_phase_overlap_does_not_compress_infrastructure.py  test_simulation.py  test_yaml_structural_sections_validate.py
